crates/host-macros/src/snapshots/omnia_host_macros__runtime__tests__expand_http_router.snap
---
source: crates/host-macros/src/runtime.rs
expression: "expand_pretty(quote!({\n    guests: [{ id: \"engine\", source: \"engine.wasm\" },], resolver:\n    CacheResolver::new(), http_router: mcp_route, hosts:\n    { WasiHttp: HttpDefault, WasiOtel: OtelDefault, },\n}))"
---
mod runtime {
    use anyhow::Result;
    use omnia::futures::future;
    use omnia::Server;
    use omnia::tokio;
    use super::*;
    use omnia::Backend;
    #[derive(Clone)]
    struct Backends {
        http_default: HttpDefault,
        otel_default: OtelDefault,
    }
    impl omnia::Backends for Backends {
        async fn connect() -> Result<Self> {
            let (http_default, otel_default) = tokio::try_join!(
                < HttpDefault as Backend > ::connect(), < OtelDefault as Backend >
                ::connect(),
            )?;
            Ok(Self { http_default, otel_default })
        }
    }
    impl omnia::HasHttp for Backends {
        fn http_view<'a>(
            &'a mut self,
            table: &'a mut omnia::wasmtime_wasi::ResourceTable,
        ) -> omnia_wasi_http::WasiHttpCtxView<'a> {
            self.http_default.as_view(table)
        }
    }
    impl omnia_wasi_otel::HasOtel for Backends {
        fn otel_ctx(&mut self) -> &mut dyn omnia_wasi_otel::WasiOtelCtx {
            &mut self.otel_default
        }
    }
    struct Hooks;
    impl omnia::Wiring<Backends> for Hooks {
        fn link(
            deployment: &mut omnia::Deployment<omnia::StoreCtx<Backends>>,
        ) -> Result<()> {
            deployment.host::<WasiHttp, Backends>()?;
            deployment.host::<WasiOtel, Backends>()?;
            Ok(())
        }
        async fn serve(runtime: &omnia::Runtime<Backends>) -> Result<()> {
            let servers: Vec<future::BoxFuture<'_, Result<()>>> = vec![
                Box::pin(WasiHttp.run(runtime)),
            ];
            future::try_join_all(servers).await?;
            Ok(())
        }
    }
    /// Entry point: run the compiled-in deployment through this
    /// runtime's hosts and backends (the standard `run` grammar, or
    /// raw argv passthrough under the `program:` key).
    #[tokio::main]
    pub async fn main() -> ::std::process::ExitCode {
        omnia::main::<
            Backends,
            Hooks,
        >(
                omnia::MainOptions::new(omnia::Mode::Server)
                    .manifest(
                        omnia::ManifestSource::Inline(
                            omnia::Manifest::new()
                                .guest(omnia::GuestEntry::new("engine", "engine.wasm")),
                        ),
                    )
                    .resolver(CacheResolver::new())
                    .http_router(mcp_route),
            )
            .await
    }
    /// Run one deployment through this runtime's hosts and backends,
    /// blocking until the guest completes.
    #[tokio::main]
    pub async fn run(builder: omnia::DeploymentBuilder) -> Result<omnia::ExitStatus> {
        omnia::run::<Backends, Hooks>(builder.mode(omnia::Mode::Server)).await
    }
}
#[allow(unused_imports)]
pub use runtime::{run, main};
