crates/host-macros/src/snapshots/omnia_host_macros__runtime__tests__expand_inline_manifest.snap
---
source: crates/host-macros/src/runtime.rs
expression: "expand_pretty(quote!({\n    dispatch: [\"omnia:link/echo\"], guests:\n    [{\n        id: \"responder\", source:\n        concat!(env!(\"CARGO_MANIFEST_DIR\"), \"/responder.wasm\"), routes:\n        { messaging: [\"orders.>\"], websocket: [\"chat.*\"], },\n    },\n    {\n        id: \"router\", source:\n        concat!(env!(\"CARGO_MANIFEST_DIR\"), \"/router.wasm\"), routes:\n        { http: [\"/\", concat!(\"/\", \"api\")], },\n    },], mounts:\n    [{\n        name: \".\", path: concat!(env!(\"CARGO_MANIFEST_DIR\"), \"/workspace\"),\n        writable: true\n    },], hosts: { WasiOtel: OtelDefault, },\n}))"
---
mod runtime {
    use anyhow::Result;
    use omnia::futures::future;
    use omnia::Server;
    use omnia::tokio;
    use super::*;
    use omnia::Backend;
    #[derive(Clone)]
    struct Backends {
        otel_default: OtelDefault,
    }
    impl omnia::Backends for Backends {
        async fn connect() -> Result<Self> {
            let (otel_default,) = tokio::try_join!(
                < OtelDefault as Backend > ::connect(),
            )?;
            Ok(Self { otel_default })
        }
    }
    impl omnia_wasi_otel::HasOtel for Backends {
        fn otel_ctx(&mut self) -> &mut dyn omnia_wasi_otel::WasiOtelCtx {
            &mut self.otel_default
        }
    }
    struct Hooks;
    impl omnia::Wiring<Backends> for Hooks {
        fn link(
            deployment: &mut omnia::Deployment<omnia::StoreCtx<Backends>>,
        ) -> Result<()> {
            deployment.host::<WasiOtel, Backends>()?;
            Ok(())
        }
        async fn serve(runtime: &omnia::Runtime<Backends>) -> Result<()> {
            let servers: Vec<future::BoxFuture<'_, Result<()>>> = vec![];
            future::try_join_all(servers).await?;
            Ok(())
        }
    }
    /// Entry point: run the compiled-in deployment through this
    /// runtime's hosts and backends (raw argv passthrough for a
    /// command deployment compiled in here, otherwise the standard
    /// `run` grammar).
    #[tokio::main]
    pub async fn main() -> ::std::process::ExitCode {
        omnia::main::<
            Backends,
            Hooks,
        >(
                omnia::MainOptions::new(omnia::Mode::Server)
                    .manifest(
                        omnia::ManifestSource::Inline(
                            omnia::Manifest::new()
                                .dispatch(["omnia:link/echo"])
                                .guest(
                                    omnia::GuestEntry::new(
                                            "responder",
                                            concat!(env!("CARGO_MANIFEST_DIR"), "/responder.wasm"),
                                        )
                                        .route_messaging("orders.>")
                                        .route_websocket("chat.*"),
                                )
                                .guest(
                                    omnia::GuestEntry::new(
                                            "router",
                                            concat!(env!("CARGO_MANIFEST_DIR"), "/router.wasm"),
                                        )
                                        .route_http("/")
                                        .route_http(concat!("/", "api")),
                                )
                                .mounts([
                                    omnia::Mount {
                                        name: ::std::string::String::from("."),
                                        path: ::std::path::PathBuf::from(
                                            concat!(env!("CARGO_MANIFEST_DIR"), "/workspace"),
                                        ),
                                        writable: true,
                                    },
                                ]),
                        ),
                    ),
            )
            .await
    }
    /// Run one deployment through this runtime's hosts and backends,
    /// blocking until the guest completes.
    #[tokio::main]
    pub async fn run(builder: omnia::DeploymentBuilder) -> Result<omnia::ExitStatus> {
        omnia::run::<Backends, Hooks>(builder.mode(omnia::Mode::Server)).await
    }
}
#[allow(unused_imports)]
pub use runtime::{run, main};
