crates/host-macros/src/snapshots/omnia_host_macros__runtime__tests__expand_locations_cached.snap
---
source: crates/host-macros/src/runtime.rs
expression: "expand_pretty(quote!({\n    plugins:\n    {\n        interfaces: [\"emery:adapter/probe\"], locations:\n        [{ name: \".\", path: project_root() }, { registry: \"ghcr.io\" },],\n        cache: PluginCache,\n    }, guests: [{ id: \"engine\", source: \"engine.wasm\" },], hosts:\n    { WasiOtel: OtelDefault, },\n}))"
---
mod runtime {
    use anyhow::Result;
    use omnia::futures::future;
    use omnia::Server;
    use omnia::tokio;
    use super::*;
    use omnia::Backend;
    #[derive(Clone)]
    struct Backends {
        otel_default: OtelDefault,
        plugin_cache: PluginCache,
    }
    impl omnia::Backends for Backends {
        async fn connect() -> Result<Self> {
            let (otel_default, plugin_cache) = tokio::try_join!(
                < OtelDefault as Backend > ::connect(), < PluginCache as Backend >
                ::connect(),
            )?;
            Ok(Self { otel_default, plugin_cache })
        }
    }
    impl omnia::Provides<WasiOtel> for Backends {
        fn borrow(&mut self) -> <WasiOtel as omnia::HostCtx>::Borrow<'_> {
            &mut self.otel_default
        }
    }
    struct Hooks;
    impl omnia::Wiring<Backends> for Hooks {
        fn link(
            deployment: &mut omnia::Deployment<omnia::StoreCtx<Backends>>,
        ) -> Result<()> {
            deployment.host::<omnia::WasiPlugins, Backends>()?;
            deployment.host::<WasiOtel, Backends>()?;
            Ok(())
        }
        fn acquirer(
            backends: &Backends,
        ) -> Option<::std::sync::Arc<dyn omnia::Acquire>> {
            Some(
                ::std::sync::Arc::new(
                    omnia::AcquireExt::or(
                        omnia::PathAcquire::new([(".", project_root())])
                            .expect("opening plugins locations"),
                        omnia::RegistryAcquire::new("ghcr.io")
                            .cached(backends.plugin_cache.clone()),
                    ),
                ),
            )
        }
        async fn serve(runtime: &omnia::Runtime<Backends>) -> Result<()> {
            let servers: Vec<future::BoxFuture<'_, Result<()>>> = vec![
                Box::pin(WasiOtel.run(runtime)),
            ];
            future::try_join_all(servers).await?;
            Ok(())
        }
    }
    /// Entry point: run the compiled-in deployment through this
    /// runtime's hosts and backends (raw argv passthrough for a
    /// command deployment compiled in here, otherwise the standard
    /// `run` grammar).
    #[tokio::main]
    pub async fn main() -> ::std::process::ExitCode {
        omnia::main::<
            Backends,
            Hooks,
        >(
                omnia::MainOptions::new(omnia::Mode::Server)
                    .manifest(
                        omnia::ManifestSource::Inline(
                            omnia::Manifest::new()
                                .plugins(["emery:adapter/probe"])
                                .guest(omnia::GuestEntry::new("engine", "engine.wasm")),
                        ),
                    ),
            )
            .await
    }
    /// Run one deployment through this runtime's hosts and backends,
    /// blocking until the guest completes.
    #[tokio::main]
    pub async fn run(builder: omnia::DeploymentBuilder) -> Result<omnia::ExitStatus> {
        omnia::run::<Backends, Hooks>(builder.mode(omnia::Mode::Server)).await
    }
}
#[allow(unused_imports)]
pub use runtime::{run, main};
